--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
             <p>Book, organize and manage unforgettable events in a whole new way</p>
             <button id="submit">Get In Touch</button>
             <div id="socialMedia">
-                <a href="DISCORD LINK HERE" target="_blank"><img src="assets\discord foavicon.png" alt="discord"></a>
-                <a href="TWITTER LINK HERE" target="_blank"><img class="smallIcon" src="assets\twitterV2.png" alt="twitter"></a>
-                <a href="TELEGRAM LINK HERE" target="_blank"><img class="smallIcon" src="assets\telegram2x.png" alt="telegram"></a>
+                <div><a href="DISCORD LINK HERE" target="_blank"><img src="assets\discord foavicon.png" alt="discord"></a></div>
+                <div><a href="TWITTER LINK HERE" target="_blank"><img src="assets\twitter favicon.png" alt="twitter"></a></div>
+                <div><a href="TELEGRAM LINK HERE" target="_blank"><img src="assets\telegram favicon.png" alt="telegram"></a></div>
             </div>
         </div>
         <div id="contentBox2">
@@ -49,7 +49,7 @@
                 <div class="left-content">
                     <h2>Our Vision</h2>
                     <p> 
-                        By building an easy-to-use platform with global a mindset, anyone can now organize and participate in local gatherings no matter where they live. We will connect like-minded groups of people from all over the world and enable them to prove ownership of their groups.
+                        By building an easy-to-use platform with a global mindset, anyone can now organize and participate in local gatherings no matter where they live. We will connect like-minded groups of people from all over the world and enable them to prove ownership of their groups.
                     </p>
                 </div>
                 <img class="animals" src="assets\our vision dog.png" alt="party dog">
@@ -103,7 +103,7 @@
     <div id="bottomBar">
         <img src="assets\logo.png" alt="logo">
         <div id="bottomForm">
-            hello@dripps.com
+            hello@dripps.io
         </div>
         <button id="contact">Get In Touch</button>
     </div>
